# xspeedhack-linux

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_and_publish.yaml  linux_ci.yml
cpp/: speedhack.c
tests/: conftest.py  test_speedhack.py
xspeedhack_linux/: __init__.py  cli.py  client.py
