[build-system]
requires = ["scikit-build-core>=0.9.0"]
build-backend = "scikit_build_core.build"

[project]
name = "xspeedhack-linux"
version = "1.0.0"
description = "Universal speedhack library for Python (Linux)"
readme = "README.md"
authors = [{name = "Xianwei Cao", email = "2432510513@qq.com"}]
keywords = ["speedhack", "games", "speed", "cheat", "linux"]
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "build",
    "scikit-build-core",
    "cmake",
    "ninja"
]

[project.scripts]
xspeedhack-launch = "xspeedhack_linux.cli:main_launch"
xspeedhack-attach = "xspeedhack_linux.cli:main_attach"

[tool.scikit-build]
cmake.version = ">=3.18"
wheel.packages = ["xspeedhack_linux", "xspeedhack_linux.bin"]
sdist.include = [
    "CMakeLists.txt",
    "cpp/**",
    "xspeedhack_linux/**",
    "tests/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
